<resources>
    <string name="app_name">Flowable Cash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_buying">Rekam transaksi pengeluaran anda</string>
    <string name="txt_selling">Rekam transaksi pemasukkan anda</string>
    <string name="txt_transaction_name">Nama Transaksi</string>
    <string name="txt_save">Simpan</string>
    <string name="txt_transaction_name_hint">Masukkan nama transaksi anda</string>
    <string name="txt_transaction_date">Tanggal Transaksi</string>
    <string name="txt_transaction_date_hint">Masukkan tanggal transaksi anda</string>
    <string name="txt_transaction_description">Deskripsi Tambahan</string>
    <string name="txt_transaction_desc_hint">Masukkan deskripsi transaksi anda</string>
    <string name="txt_balance">Harga</string>
    <string name="txt_balance_hint">Masukkan harga transaksi anda</string>
    <string name="txt_purchase_type">Tipe Pengeluaran</string>
    <string name="txt_purchase_type_hint">Masukkan tipe pengeluaran yang dilakukan</string>
    <string name="txt_default">Lorem ipsum</string>
    <string name="txt_all_transactions">All Transactions</string>
    <string name="txt_all_sale">All Sales</string>
    <string name="txt_all_purchases">All Purchases</string>
    <string name="txt_transaction_name_item">Transaction Name :</string>
    <string name="txt_update">Update</string>
    <string name="txt_asset">Record your equity and assets first</string>
    <string name="txt_insert_fee_type">Masukkan tipe biaya</string>
    <string name="txt_fee_type">Biaya tambahan</string>
    <string name="txt_fee">Fee</string>
    <string name="txt_masukkan_biaya_penjualan_pembelian">Masukkan biaya tambahan</string>
    <string name="txt_cash_receipt_journal">Rekap Pemasukkan</string>
    <string name="txt_purchases_journal">Rekap Pengeluaran</string>
    <string name="txt_edit_your_balance_sheet">Masukkan Saldo Awal</string>
    <string name="txt_update_your_balance_sheet">Masukkan saldo awal</string>
    <string name="txt_add_edit_transactions_accounts">Add/Edit Transactions/Accounts</string>
    <string name="txt_transactiontype">TransactionType</string>
    <string name="txt_transactiontotal">TransactionTotal</string>
    <string name="txt_transactiondate">TransactionDate</string>
    <string name="txt_transactionname">TransactionName</string>
    <string name="txt_neraca_saldo">Rekap Harga Pokok Penjualan</string>
    <string name="txt_income_statements">Laba Rugi</string>
    <string name="txt_pendapatan_dari_penjualan">Pendapatan dari Penjualan</string>
    <string name="txt_harga_pembelian">Harga Pokok Penjualan</string>
    <string name="txt_harga_beban_pembelian">Harga Beban Pengemasan</string>
    <string name="txt_harga_beban_penjualan">Harga Biaya - Biaya</string>
    <string name="txt_payment_type_hint">Masukkan tipe pembayaran</string>
    <string name="payment_type">Tipe Pembayaran</string>
    <string name="txt_harga_beban_operasional">Harga Beban Operasional</string>
    <string name="txt_harga_beban_lainnya">Harga Beban Lainnya</string>
    <string name="txt_posisi_keuangan">Posisi Keuangan</string>
    <string name="txt_masukkan_tipe_pemasukkan_yang_dilakukan">Masukkan tipe pemasukkan yang dilakukan</string>
    <string name="txt_tipe_pemasukkan">Tipe Pemasukkan</string>
    <string-array name="pemasukkan_type">
        <item>Pendapatan</item>
        <item>Pembayaran Piutang</item>
    </string-array>
    <string-array name="transaction_type">
        <item>Pembelian</item>
        <item>Penjualan</item>
    </string-array>
    <string-array name="account_name">
        <!-- Aset Lancar -->
        <item>Uang Tunai dan Saldo Bank</item>
        <item>Piutang Usaha</item>
        <item>Stok Barang</item>
        <item>Stok Bahan Baku</item>
        <item>Stok Bahan Tambahan</item>
        <!-- Aset Tetap -->
        <item>Peralatan Bisnis</item>
        <item>Kendaraan</item>
        <item>Peralatan Lainnya</item>
    </string-array>
    <string-array name="transaction_date_sort">
        <item>Hari Ini</item>
        <item>Kemarin</item>
        <item>7 Hari Lalu</item>
        <item>30 Hari Lalu</item>
        <item>Bulan Ini</item>
        <item>Bulan Lalu</item>
    </string-array>
    <string-array name="payment_type">
        <item>Tunai</item>
        <item>Non-Tunai</item>
    </string-array>
    <string-array name="purchase_type">
        <!-- HPP -->
        <item>Bahan Baku</item>
        <item>Barang Dagang</item>
        <item>Bahan Tambahan</item>
        <!-- Aset Tetap -->
        <item>Pengeluaran untuk Pembelian Alat Usaha</item>
        <!-- Beban Beban -->
        <item>Biaya Listrik</item>
        <item>Biaya Air</item>
        <item>Biaya Perbaikan</item>
        <item>Biaya Promosi</item>
        <item>Biaya Ongkos Kirim</item>
        <item>Biaya Pengemasan</item>
        <item>Biaya Gaji</item>
        <item>Biaya Sewa</item>
        <item>Biaya Lainnya</item>
        <!-- Special Ocassion -->
        <item>Membayar Hutang</item>
    </string-array>
</resources>