<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.journaling.update.UpdateFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:alpha="0.9"
            android:background="@color/blue_sea"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/white"
            app:title="Update: Transaksi"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="14dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/txt_transaction_date"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_transaction_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_date"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/txt_transaction_date_hint"
                    android:inputType="none"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Nama Transaksi"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_transaction_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="none"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/txt_transaction_description"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_transaction_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_transaction_desc_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/txt_balance"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_transaction_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_balance_hint"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_update" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>